--- a/style.css
+++ b/style.css
@@ -438,6 +438,12 @@ nav ul li a:hover {
     font-weight: 600;
     transform: translateY(20px);
     transition: transform 0.4s ease;
+    transition: var(--transition);
+}
+.view-btn:hover {
+    background-color: var(--color-gold);
+    color: var(--color-white);
+    cursor: pointer;
 }
 
 .watch-card:hover .view-btn {
