--- a/AP/ap.css
+++ b/AP/ap.css
@@ -26,12 +26,15 @@ body {
 }
 
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
+    position: relative;
 }
+
+.hero-image {
+    height: calc(100vh - 80px);
+    /* adjust to nav height */
+}
+
+
 
 main {
     margin: 0;
@@ -40,6 +43,7 @@ main {
 
 .hero-image {
     height: 100vh;
+    margin-top: 0;
     width: 100%;
     /* background:
         linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
@@ -51,8 +55,8 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 0 20px;
+    align-items: flex-start;
+    padding-left: 80px;
 }
 
 .nav {
@@ -77,9 +81,10 @@ main {
 }
 
 .hero-content {
-    text-align: center;
+    text-align: left;
     color: var(--color-white);
     z-index: 1;
+    max-width: 600px;
 }
 
 .hero-content h1 {
@@ -89,6 +94,7 @@ main {
     margin-bottom: 1rem;
     letter-spacing: 2px;
     text-transform: uppercase;
+    font-weight: 900;
 }
 
 .hero-content p {
@@ -97,4 +103,62 @@ main {
     font-weight: 300;
     letter-spacing: 1px;
     opacity: 0.9;
+}
+
+.watch-video {
+    margin-top: 0px;
+    position: relative;
+    width: 100%;
+    height: 900px;
+    overflow: hidden;
+}
+
+.watch-video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video-content {
+    position: absolute;
+    top: 50%;
+    left: 80px;
+    transform: translateY(-50%);
+    color: var(--color-white);
+    font-family: var(--font-body);
+    font-size: 3rem;
+    font-weight: 100;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    max-width: 500px;
+    z-index: 2;
+}
+
+.watch-video a {
+    position: absolute;
+    top: 60%;
+    left: 80px;
+    z-index: 2;
+    text-decoration: none;
+}
+
+.watch-video button {
+    background-color: transparent;
+    color: var(--color-white);
+    border: 2px solid var(--color-white);
+    padding: 20px 40px;
+    font-family: var(--font-body);
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: var(--transition);
+    margin: 5px;
+    margin-top: 30px;
+}
+
+.watch-video button:hover {
+    background-color: var(--color-white);
+    color: var(--color-black);
 }
